@@ -14,7 +14,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.alluxio</groupId>
   <artifactId>alluxio-parent</artifactId>
-  <version>295-SNAPSHOT</version>
+  <version>302-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Alluxio Parent</name>
   <description>Parent POM of Alluxio project: a Memory-Speed Virtual Distributed Storage System</description>
@@ -30,7 +30,7 @@
     <connection>scm:git:git@github.com:alluxio/alluxio.git</connection>
     <developerConnection>scm:git:git@github.com:alluxio/alluxio.git</developerConnection>
     <url>scm:git:git@github.com:alluxio/alluxio.git</url>
-    <tag>HEAD</tag>
+    <tag>alluxio-parent-302-SNAPSHOT</tag>
   </scm>
   <developers>
     <developer>
@@ -125,8 +125,10 @@
     <argLine />
     <apache.curator.version>4.2.0</apache.curator.version>
     <aws.amazonaws.version>1.11.815</aws.amazonaws.version>
+    <awssdk.version>2.20.56</awssdk.version>
     <build.path>build</build.path>
     <catalyst.version>1.2.1</catalyst.version>
+    <caffeine.version>3.1.6</caffeine.version>
     <glusterfs-hadoop.version>2.3.13</glusterfs-hadoop.version>
     <grpc.version>1.54.1</grpc.version>
     <gson.version>2.8.9</gson.version>
@@ -134,7 +136,7 @@
     <rocksdb.version>7.0.3</rocksdb.version>
     <hadoop.version>3.3.1</hadoop.version>
     <jacoco.version>0.8.5</jacoco.version>
-    <java.version>11</java.version>
+    <java.version>1.8</java.version>
     <jaxb.version>2.3.3</jaxb.version>
     <jersey.version>2.34</jersey.version>
     <jetty.version>9.4.46.v20220331</jetty.version>
@@ -151,12 +153,14 @@
     <guava.version>31.0.1-jre</guava.version>
     <guice.version>5.1.0</guice.version>
     <parquet.version>1.11.0</parquet.version>
-    <protobuf.version>3.19.2</protobuf.version>
+    <protobuf.version>3.19.6</protobuf.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.build.outputTimestamp>${git.commit.time}</project.build.outputTimestamp>
     <slf4j.version>1.7.30</slf4j.version>
-    <jackson.version>2.13.3</jackson.version>
+    <jackson.version>2.13.5</jackson.version>
     <hadoop-cos.version>3.1.0-5.8.5</hadoop-cos.version>
     <cos_api.version>5.6.19</cos_api.version>
+    <s3proxy.version>2.0.0</s3proxy.version>
     <stateless4j.version>2.6.0</stateless4j.version>
     <surefire.forkCount>2</surefire.forkCount>
     <surefire.useSystemClassLoader>true</surefire.useSystemClassLoader>
@@ -164,6 +168,7 @@
     <surefire.rerunFailingTestsCount>1</surefire.rerunFailingTestsCount>
     <test.output.redirect>true</test.output.redirect>
     <update.check.auth.string>YWxsdXhpbzp0YWNoeW9u</update.check.auth.string>
+    <update.check.configurable>true</update.check.configurable>
     <update.check.enabled>true</update.check.enabled>
     <update.check.host>https://diagnostics.alluxio.io</update.check.host>
     <findbugs.skip>false</findbugs.skip>
@@ -244,6 +249,11 @@
         <groupId>com.fasterxml.jackson.dataformat</groupId>
         <artifactId>jackson-dataformat-xml</artifactId>
         <version>${jackson.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.github.ben-manes.caffeine</groupId>
+        <artifactId>caffeine</artifactId>
+        <version>2.9.3</version>
       </dependency>
       <dependency>
         <groupId>com.github.serceman</groupId>
@@ -375,6 +385,11 @@
       </dependency>
       <dependency>
         <groupId>io.grpc</groupId>
+        <artifactId>grpc-services</artifactId>
+        <version>${grpc.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.grpc</groupId>
         <artifactId>grpc-stub</artifactId>
         <version>${grpc.version}</version>
       </dependency>
@@ -412,11 +427,6 @@
         <groupId>jakarta.ws.rs</groupId>
         <artifactId>jakarta.ws.rs-api</artifactId>
         <version>2.1.6</version>
-      </dependency>
-      <dependency>
-        <groupId>javax.annotation</groupId>
-        <artifactId>javax.annotation-api</artifactId>
-        <version>1.3.2</version>
       </dependency>
       <dependency>
         <groupId>javax.servlet</groupId>
@@ -692,6 +702,13 @@
         <version>${kerby.version}</version>
       </dependency>
       <dependency>
+        <groupId>software.amazon.awssdk</groupId>
+        <artifactId>bom</artifactId>
+        <version>${awssdk.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
         <groupId>it.unimi.dsi</groupId>
         <artifactId>fastutil-core</artifactId>
         <version>${fastutil.version}</version>
@@ -731,6 +748,18 @@
         <artifactId>hadoop-test</artifactId>
         <version>${hadoop.version}</version>
         <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.gaul</groupId>
+        <artifactId>s3proxy</artifactId>
+        <version>${s3proxy.version}</version>
+        <scope>test</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.hamcrest</groupId>
@@ -789,7 +818,7 @@
       <dependency>
         <artifactId>xstream</artifactId>
         <groupId>com.thoughtworks.xstream</groupId>
-        <version>1.4.19</version>
+        <version>1.4.20</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
@@ -889,14 +918,14 @@
           <version>1.0</version>
         </plugin>
         <plugin>
-          <groupId>com.igormaznitsa</groupId>
-          <artifactId>jcp</artifactId>
-          <version>6.1.2</version>
-        </plugin>
-        <plugin>
           <groupId>com.mycila</groupId>
           <artifactId>license-maven-plugin</artifactId>
-          <version>4.0.rc1</version>
+          <version>4.2</version>
+        </plugin>
+        <plugin>
+          <groupId>pl.project13.maven</groupId>
+          <artifactId>git-commit-id-plugin</artifactId>
+          <version>4.0.5</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -923,11 +952,8 @@
             <maxmem>1024m</maxmem>
             <compilerArgs>
               <arg>-Xlint:none</arg>
-              <arg>--add-exports=java.base/jdk.internal.access=ALL-UNNAMED</arg>
-              <arg>--add-exports=java.base/jdk.internal=ALL-UNNAMED</arg>
-              <arg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
-              <arg>--add-exports=java.management/sun.management=ALL-UNNAMED</arg>
             </compilerArgs>
+            <forceJavacCompilerUse>true</forceJavacCompilerUse>
           </configuration>
         </plugin>
         <plugin>
@@ -948,7 +974,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>2.4</version>
+          <version>3.2.0</version>
           <configuration>
             <excludes>
               <exclude>**/log4j.properties</exclude>
@@ -974,19 +1000,19 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-shade-plugin</artifactId>
           <!-- Needs to be 2.4.2 or later to prevent MSHADE-148 -->
-          <version>3.2.1</version>
+          <version>3.2.3</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
-          <version>2.3</version>
+          <version>3.2.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.0.0-M5</version>
+          <version>3.0.0</version>
           <configuration>
-            <argLine>@{argLine} -Djava.net.preferIPv4Stack=true --add-opens java.base/jdk.internal.loader=ALL-UNNAMED --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED</argLine>
+            <argLine>@{argLine} -Djava.net.preferIPv4Stack=true</argLine>
             <excludesFile>${build.path}/surefire/${surefire.excludesFile}</excludesFile>
             <forkCount>${surefire.forkCount}</forkCount>
             <rerunFailingTestsCount>${surefire.rerunFailingTestsCount}</rerunFailingTestsCount>
@@ -1034,7 +1060,7 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>properties-maven-plugin</artifactId>
-          <version>1.0.0</version>
+          <version>1.1.0</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
@@ -1139,6 +1165,32 @@
         </executions>
       </plugin>
 
+      <!-- Use commit time for reproducible builds - https://maven.apache.org/guides/mini/guide-reproducible-builds.html -->
+      <plugin>
+        <groupId>pl.project13.maven</groupId>
+        <artifactId>git-commit-id-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>get-the-git-infos</id>
+            <goals>
+              <goal>revision</goal>
+            </goals>
+            <phase>initialize</phase>
+          </execution>
+        </executions>
+        <configuration>
+          <generateGitPropertiesFile>true</generateGitPropertiesFile>
+          <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
+          <dateFormat>yyyy-MM-dd'T'HH:mm:ss'Z'</dateFormat>
+          <includeOnlyProperties>
+            <includeOnlyProperty>git.commit.time</includeOnlyProperty>
+            <includeOnlyProperty>git.build.version</includeOnlyProperty>
+            <includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>
+          </includeOnlyProperties>
+          <commitIdGenerationMode>full</commitIdGenerationMode>
+        </configuration>
+      </plugin>
+
       <!-- SpotBugs -->
       <plugin>
         <groupId>com.github.spotbugs</groupId>
@@ -1189,7 +1241,7 @@
             <sourceDirectory>${project.build.testSourceDirectory}</sourceDirectory>
           </sourceDirectories>
           <includeTestSourceDirectory>true</includeTestSourceDirectory>
-          <excludes>**/org/apache/jsp/**,**/alluxio/jnifuse/**</excludes>
+          <excludes>**/org/apache/jsp/**,**/alluxio/concurrent/jsr/**,**/alluxio/jnifuse/**</excludes>
           <encoding>UTF-8</encoding>
           <consoleOutput>true</consoleOutput>
           <failsOnError>true</failsOnError>
@@ -1211,64 +1263,70 @@
         <groupId>com.mycila</groupId>
         <artifactId>license-maven-plugin</artifactId>
         <configuration>
-          <header>${build.path}/license/HEADER.txt</header>
-          <failIfMissing>true</failIfMissing>
           <aggregate>false</aggregate>
-          <excludes>
+          <failIfMissing>true</failIfMissing>
+          <licenseSets>
+            <licenseSet>
+              <header>${build.path}/license/HEADER.txt</header>
+              <excludes>
 
-            <!-- Code Exclusions -->
-            <exclude>**/src/main/resources/*</exclude>
-            <exclude>**/src/proto/**</exclude>
-            <exclude>**/src/deb/**/*</exclude>
-            <exclude>**/src/test/resources/**</exclude>
-            <exclude>**/\?/.java/**/*</exclude>
+                <!-- Code Exclusions -->
+                <exclude>**/src/main/java/alluxio/concurrent/jsr/**</exclude>
+                <exclude>**/src/main/resources/*</exclude>
+                <exclude>**/src/proto/**</exclude>
+                <exclude>**/src/deb/**/*</exclude>
+                <exclude>**/src/test/resources/**</exclude>
+                <exclude>**/\?/.java/**/*</exclude>
 
-            <!-- Build and Packaging Exclusions -->
-            <exclude>webui/node_modules/*</exclude>
-            <exclude>build/**/*</exclude>
-            <exclude>conf/alluxio-env.sh</exclude>
-            <exclude>conf/alluxio-site.properties</exclude>
-            <exclude>conf/masters</exclude>
-            <exclude>conf/tiered_identity.sh</exclude>
-            <exclude>conf/workers</exclude>
-            <exclude>dev/scripts/src/alluxio.org/go.mod</exclude>
-            <exclude>dev/scripts/src/alluxio.org/go.sum</exclude>
-            <exclude>dev/scripts/tarballs/**/*</exclude>
-            <exclude>dev/scripts/workdir/**/*</exclude>
-            <exclude>generated/**</exclude>
-            <exclude>**/.checkstyle</exclude>
-            <exclude>**/src/main/assembly/*</exclude>
-            <exclude>**/.idea/**</exclude>
-            <exclude>webui/**/.nvmrc</exclude>
-            <exclude>webui/**/*.svg</exclude>
-            <exclude>webui/**/.env*</exclude>
-            <exclude>webui/**/node/**</exclude>
-            <exclude>webui/**/node_modules/**</exclude>
-            <exclude>webui/**/src/**/*.css</exclude>
-            <exclude>webui/**/build/**</exclude>
+                <!-- Build and Packaging Exclusions -->
+                <exclude>webui/node_modules/*</exclude>
+                <exclude>build/**/*</exclude>
+                <exclude>conf/alluxio-env.sh</exclude>
+                <exclude>conf/alluxio-site.properties</exclude>
+                <exclude>conf/masters</exclude>
+                <exclude>conf/tiered_identity.sh</exclude>
+                <exclude>conf/workers</exclude>
+                <exclude>dev/scripts/src/alluxio.org/go.mod</exclude>
+                <exclude>dev/scripts/src/alluxio.org/go.sum</exclude>
+                <exclude>dev/scripts/tarballs/**/*</exclude>
+                <exclude>dev/scripts/workdir/**/*</exclude>
+                <exclude>generated/**</exclude>
+                <exclude>libexec/version.sh</exclude>
+                <exclude>**/.checkstyle</exclude>
+                <exclude>**/src/main/assembly/*</exclude>
+                <exclude>**/.idea/**</exclude>
+                <exclude>webui/**/.nvmrc</exclude>
+                <exclude>webui/**/*.svg</exclude>
+                <exclude>webui/**/.env*</exclude>
+                <exclude>webui/**/node/**</exclude>
+                <exclude>webui/**/node_modules/**</exclude>
+                <exclude>webui/**/src/**/*.css</exclude>
+                <exclude>webui/**/build/**</exclude>
 
-            <!-- Documentation Exclusions -->
-            <exclude>docs/**/*</exclude>
-            <exclude>LICENSE</exclude>
-            <exclude>NOTICE</exclude>
-            <exclude>templates/*</exclude>
+                <!-- Documentation Exclusions -->
+                <exclude>docs/**/*</exclude>
+                <exclude>LICENSE</exclude>
+                <exclude>NOTICE</exclude>
+                <exclude>templates/*</exclude>
 
-            <!-- Default Local File System Exclusions -->
-            <exclude>logs/**/*</exclude>
-            <exclude>journal/**/*</exclude>
-            <exclude>metastore/**/*</exclude>
-            <exclude>underFSStorage/**/*</exclude>
-          </excludes>
+                <!-- Default Local File System Exclusions -->
+                <exclude>logs/**/*</exclude>
+                <exclude>journal/**/*</exclude>
+                <exclude>metastore/**/*</exclude>
+                <exclude>underFSStorage/**/*</exclude>
+              </excludes>
+            </licenseSet>
+          </licenseSets>
           <mapping>
             <alluxio>SCRIPT_STYLE</alluxio>
-            <go>SLASHSTAR_STYLE</go>
             <cc>SLASHSTAR_STYLE</cc>
+            <go>SLASHSTAR_STYLE</go>
             <h>SLASHSTAR_STYLE</h>
             <java>SLASHSTAR_STYLE</java>
-            <tsx>SLASHSTAR_STYLE</tsx>
-            <scss>SLASHSTAR_STYLE</scss>
             <properties.template>SCRIPT_STYLE</properties.template>
+            <scss>SLASHSTAR_STYLE</scss>
             <sh.template>SCRIPT_STYLE</sh.template>
+            <tsx>SLASHSTAR_STYLE</tsx>
             <workers>SCRIPT_STYLE</workers>
             <xml.template>XML_STYLE</xml.template>
           </mapping>
@@ -1285,12 +1343,12 @@
         </executions>
       </plugin>
 
-      <!-- Prevent Windows line endings -->
       <plugin>
         <artifactId>exec-maven-plugin</artifactId>
         <groupId>org.codehaus.mojo</groupId>
         <inherited>false</inherited>
         <executions>
+          <!-- Prevent Windows line endings -->
           <execution>
             <id>Check that there are no Windows line endings</id>
             <phase>compile</phase>
@@ -1299,6 +1357,18 @@
             </goals>
             <configuration>
               <executable>${build.path}/style/check_no_windows_line_endings.sh</executable>
+            </configuration>
+          </execution>
+          <!-- Create libexec/version.sh -->
+          <execution>
+            <id>Write version string in generated packaged script</id>
+            <phase>compile</phase>
+            <goals>
+              <goal>exec</goal>
+            </goals>
+            <configuration>
+              <executable>${build.path}/version/write_version.sh</executable>
+              <arguments>${project.version}</arguments>
             </configuration>
           </execution>
         </executions>
@@ -1352,6 +1422,44 @@
       <properties>
         <hadoop.version>3.3.1</hadoop.version>
       </properties>
+    </profile>
+
+    <!-- Requires hadoop.version to be 2.4.0 or later -->
+    <profile>
+      <id>java11</id>
+      <activation>
+        <jdk>11</jdk>
+      </activation>
+      <properties>
+        <java.version>1.8</java.version>
+      </properties>
+      <dependencyManagement>
+        <dependencies>
+          <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+          </dependency>
+        </dependencies>
+      </dependencyManagement>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <configuration>
+              <source>11</source>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>--add-opens java.base/jdk.internal.loader=ALL-UNNAMED --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED</argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
 
     <!-- profile that Alluxio developers should use -->
